--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,6 @@ language: java
 sudo: false
 jdk: oraclejdk8
 
-before_install:
-  - nvm install 6.9.5
-  - node --version
-  - npm install -g appium
-  - npm install -g appium-doctor
-
 script:
   - android list sdk --all
 
@@ -39,7 +33,8 @@ android:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 
-# Emulator Management: Create, Start and Wait
-before_script:
-  - appium
-  - appium-doctor
+deploy:
+  provider: testfairy
+  api-key: "aa2f450c873d306064c9e227872fab23fac448ec"
+  app-file: bin/AlertDialogTest.apk
+  testers-groups: Bank_Sinarmas	
